Fix background stretching on Chrome mobile browsers

--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@
     font-family: "Roboto", sans-serif;
 }
 
-body {
+html, body {
+    min-height: calc(100% - 50px);
     margin: 0;
     margin-top: 50px;
     background: var(--backgroundColour);
